istio/lab1-apply-istio/virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: caj-web
spec:
  hosts:
    - caj-web
  http:
  - route:
    - destination:
        host: caj-web
        subset: v1
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: caj-gateway
spec:
  hosts:
    - caj-gateway
  http:
  - route:
    - destination:
        host: caj-gateway
        subset: v1
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: caj-fare
spec:
  hosts:
    - caj-fare
  http:
  - route:
    - destination:
        host: caj-fare
        subset: v1
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: caj-master-file
spec:
  hosts:
    - caj-master-file
  http:
  - route:
    - destination:
        host: caj-master-file
        subset: v1
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: caj-schedule
spec:
  hosts:
    - caj-schedule
  http:
  - route:
    - destination:
        host: caj-schedule
        subset: v1
      weight: 100
